--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -5,15 +5,43 @@
 </head>
 
 <body>
-<h1 class="display-2">Microsoft Teams Code Sample</h1>
-<h1 class="display-4">Configurable Tabs</h1>
+  <p class="lead">Microsoft Teams Code Sample: Configurable Tabs</p>
 
 <p>This is the first page your user sees when they add your tab to their Teams channel. You can use it to introduce how your tab works, or gather information and settings and use it to personalise the content of the page.</p>
 
 <p>To demonstrate this, enter your name below to see it used in the tab. To change this later, use the Settings link - which re-open this page.</p>
+  
+<form>
+  Your Name: <input type="text" name="yourName" onclick="onClick()"></input>  
+</form> 
 
 <p>For more information about this code sample, read the associated blog post:</p>
 
+<script src="https://statics.teams.microsoft.com/sdk/v1.0/js/MicrosoftTeams.min.js"></script>
+
+<script type="text/javascript">  
+
+microsoftTeams.initialize();
+microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
+  
+   
+       microsoftTeams.settings.setSettings({
+         entityId: "bing",
+         contentUrl: "https://www.bing.com/maps/embed",
+         suggestedDisplayName: "Bing Map",
+         websiteUrl: "https://www.bing.com/maps",
+         removeUrl: "https://teams-get-started-sample.azurewebsites.net/tabremove.html",
+      });
+   
+
+    saveEvent.notifySuccess();
+});
+
+function onClick() {
+    microsoftTeams.settings.setValidityState(true);
+}  
+  
+  
 </body>
 
 
