--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -12,8 +12,9 @@
 <p>To demonstrate this, enter your name below to see it used in the tab. To change this later, use the Settings link - which re-open this page.</p>
   
 <form>
-  Your Name: <input type="text" name="yourName" onclick="onClick()"></input>  
+  Your Name: <input type="text" name="yourName"></input>  
 </form> 
+  <button class="btn btn-success" onclick="onClick()">Go!</button>
 
 <p>For more information about this code sample, read the associated blog post:</p>
 
