--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -41,7 +41,7 @@ microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
 function onClick() {
     microsoftTeams.settings.setValidityState(true);
 }  
-  
+  </script>
   
 </body>
 
