--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -14,7 +14,7 @@
 <form>
   Your Name: <input type="text" name="yourName"></input>  
 </form> 
-  <button class="btn btn-success" onclick="onClick()">Go!</button>
+  <button class="btn btn-success" onchange="setOkToSave()">Go!</button>
 
 <p>For more information about this code sample, read the associated blog post:</p>
 
@@ -38,7 +38,7 @@ microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
     saveEvent.notifySuccess();
 });
 
-function onClick() {
+function setOkToSave() {
     microsoftTeams.settings.setValidityState(true);
 }  
   </script>
