--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -12,7 +12,7 @@
 <p>To demonstrate this, enter your name below to see it used in the tab. To change this later, use the Settings link - which re-open this page.</p>
   
 <form>
-  Your Name: <input type="text" name="yourName"></input>  
+  Your Name: <input type="text" name="yourName" onchange="setOkToSave(this)"></input>  
 </form> 
   
 
@@ -21,6 +21,8 @@
 <script src="https://statics.teams.microsoft.com/sdk/v1.0/js/MicrosoftTeams.min.js"></script>
 
 <script type="text/javascript">  
+  
+ var inputName;
 
 microsoftTeams.initialize();
 microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
@@ -28,17 +30,18 @@ microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
    
        microsoftTeams.settings.setSettings({
          entityId: "bing",
-         contentUrl: "https://www.bing.com/maps/embed",
-         suggestedDisplayName: "Bing Map",
-         websiteUrl: "https://www.bing.com/maps",
-         removeUrl: "https://teams-get-started-sample.azurewebsites.net/tabremove.html",
+         contentUrl: "https://tomorgan.github.io/MSTeamsSamples/tabs/configurable/config.html?name=" + inputName,
+         suggestedDisplayName: ThoughtStuff Configurable Tab Sample",
+         websiteUrl: "https://thoughtstuff.co.uk",
+         removeUrl: "https://tomorgan.github.io/MSTeamsSamples/tabs/configurable/remove.html",
       });
    
 
     saveEvent.notifySuccess();
 });
 
-function setOkToSave() {
+function setOkToSave(name) {
+    inputName = name.value;
     microsoftTeams.settings.setValidityState(true);
 }  
   </script>
