--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -31,7 +31,7 @@ microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
        microsoftTeams.settings.setSettings({
          entityId: "bing",
          contentUrl: "https://tomorgan.github.io/MSTeamsSamples/tabs/configurable/config.html?name=" + inputName,
-         suggestedDisplayName: ThoughtStuff Configurable Tab Sample",
+         suggestedDisplayName: "ThoughtStuff Configurable Tab Sample",
          websiteUrl: "https://thoughtstuff.co.uk",
          removeUrl: "https://tomorgan.github.io/MSTeamsSamples/tabs/configurable/remove.html",
       });
