--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -12,7 +12,7 @@
 <p>To demonstrate this, enter your name below to see it used in the tab. To change this later, use the Settings link - which re-open this page.</p>
   
 <form>
-  Your Name: <input type="text" name="yourName" onchange="setOkToSave(this)"></input>  
+  Your Name: <input type="text" name="yourName" onkeydown="setOkToSave(this)"></input>  
 </form> 
   
 
@@ -29,7 +29,7 @@ microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
   
    
        microsoftTeams.settings.setSettings({
-         entityId: "bing",
+         entityId: "configTab1",
          contentUrl: "https://tomorgan.github.io/MSTeamsSamples/tabs/configurable/config.html?name=" + inputName,
          suggestedDisplayName: "ThoughtStuff Configurable Tab Sample",
          websiteUrl: "https://thoughtstuff.co.uk",
