--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -43,6 +43,7 @@ microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
 function setOkToSave(name) {
     inputName = name.value;
     microsoftTeams.settings.setValidityState(true);
+  return true;
 }  
   </script>
   
