--- a/tabs/configurable/config.html
+++ b/tabs/configurable/config.html
@@ -33,8 +33,7 @@ microsoftTeams.settings.registerOnSaveHandler(function(saveEvent){
          entityId: "configTab1",
          contentUrl: "https://tomorgan.github.io/MSTeamsSamples/tabs/configurable/tab.html?name=" + document.getElementById('userName').value,
          suggestedDisplayName: "ThoughtStuff Configurable Tab Sample",
-         websiteUrl: "https://thoughtstuff.co.uk",
-         removeUrl: "https://tomorgan.github.io/MSTeamsSamples/tabs/configurable/remove.html",
+         websiteUrl: "https://thoughtstuff.co.uk"         
       });
    
 
